feat(objectTest): finnished implementing the unittests and debugging

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This is the OOP version of the algorythm presented in the file \"solution.ipynb\"          \n",
+    "> The equivalent of the main function of that file (trajectory_error) here belongs to the Trajectory class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,7 +17,7 @@
     "from math import sqrt\n",
     "import doctest\n",
     "import numpy as np\n",
-    "import numpy.linalg"
+    "import numpy.linalg as lin"
    ]
   },
   {
@@ -107,7 +115,7 @@
     "        \"\"\"\n",
     "        total_length = 0\n",
     "        for i in range(len(path)-1):\n",
-    "            total_length += Segment(path[i],path[i+1]).length\n",
+    "            total_length += Segment(path[i],path[i+1]).length()\n",
     "        return total_length\n",
     "    \n",
     "    def point_belongs_to_segment(self,point):\n",
@@ -136,7 +144,7 @@
     "            return False\n",
     "\n",
     "        squared_segment_length = self.length()**2\n",
-    "        if dotproduct > squared_segment_length:\n",
+    "        if dot_product > squared_segment_length:\n",
     "            # Then point is beyond self.p2, not between the two points.\n",
     "            return False\n",
     "\n",
@@ -245,14 +253,14 @@
     "\n",
     "        # first triangle:\n",
     "        base = Segment(self.p1, other.p2).length()\n",
-    "        height = Segment(self.p2, Segment(self.p1, other.p2).ortogonal_projection(self.p2)).length()\n",
+    "        height = Segment(self.p2, Segment(self.p1, other.p2).orthogonal_projection(self.p2)).length()\n",
     "        area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "        # second triangle:\n",
     "        base = Segment(self.p1, other.p2).length()\n",
     "        # base = self.length(self.p1, other.p2)\n",
-    "        height = Segment(other.p1, Segment(self.p1, other.p2).ortogonal_projection(other.p1)).length()\n",
-    "        # height =  self.length(other.p1, ortogonal_projection(self.p1, other.p2, other.p1))\n",
+    "        height = Segment(other.p1, Segment(self.p1, other.p2).orthogonal_projection(other.p1)).length()\n",
+    "        # height =  self.length(other.p1, orthogonal_projection(self.p1, other.p2, other.p1))\n",
     "        area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "        return area\n",
@@ -285,7 +293,7 @@
     "        return(0.5*np.linalg.det(np.array([[self.p2.x - self.p1.x,self.p3.x - self.p1.x ],\\\n",
     "                                           [self.p2.y - self.p1.y, self.p3.y - self.p1.y]])))\n",
     "    \n",
-    "    def area_right_triangle(cls,base, height):\n",
+    "    def area_right_triangle(base, height):\n",
     "        \"\"\"\n",
     "        Compute the area of a right triangle.\n",
     "\n",
@@ -313,7 +321,7 @@
     "        self.theo = theo\n",
     "        self.expe = expe\n",
     "    \n",
-    "    def trajectory_error():\n",
+    "    def trajectory_error(self):\n",
     "        \"\"\"\n",
     "        Compute the error between the theoretical and the experimental trajectories,\n",
     "        in the format decided, that is, the area between the two paths divided by\n",
@@ -325,23 +333,23 @@
     "        \"\"\"\n",
     "        # initialize values:\n",
     "        area = 0 # the total area between the theoretical and experimental paths\n",
-    "        distance = theo.path_length() # total theoretical path length\n",
+    "        distance = Segment.path_length(self.theo) # total theoretical path length\n",
     "        j = 0 # iterator over the experimental path\n",
     "        i = 0 # iterator over the theoretical path\n",
     "\n",
     "        # start iterations:\n",
-    "        while (i+1 < len(theo) and j+1 < len(expe)):     \n",
+    "        while (i+1 < len(self.theo) and j+1 < len(self.expe)):     \n",
     "            # we work on a subsegment [coord_th[i], coord_th[i+1]]        \n",
     "            # search for an intersection:\n",
-    "            intersect_point = Segment(theo[i],theo[i+1]).intersection(Segment(expe[j],expe[j+1]))\n",
+    "            intersect_point = Segment(self.theo[i], self.theo[i+1]).intersection(Segment(self.expe[j], self.expe[j+1]))\n",
     "            # compute orthogonal projections:\n",
-    "            splitting_segment = Segment(theo[i],theo[i+1])\n",
-    "            ort_proj1 =  splitting_segment.ortogonal_projection(expe[j])\n",
-    "            ort_proj2 =  splitting_segment.ortogonal_projection(expe[j+1])\n",
+    "            splitting_segment = Segment(self.theo[i], self.theo[i+1])\n",
+    "            ort_proj1 =  splitting_segment.orthogonal_projection(self.expe[j])\n",
+    "            ort_proj2 =  splitting_segment.orthogonal_projection(self.expe[j+1])\n",
     "\n",
     "            if intersect_point:\n",
     "\n",
-    "                if intersect_point == theo[i+1] == expe[j]:\n",
+    "                if intersect_point == self.theo[i+1] == self.expe[j]:\n",
     "                    # we're outside of the subsegment\n",
     "                    i += 1 # advance along the theoretical path                 \n",
     "\n",
@@ -350,38 +358,38 @@
     "                    # Before the intersection:\n",
     "                    # the points form the right triangle -> coord_exp[j], its projection, intersection\n",
     "                    base = Segment(ort_proj1,intersect_point).length()\n",
-    "                    height =  Segment(expe[j], ort_proj1).length()\n",
-    "                    area += area_right_triangle(base, height)\n",
+    "                    height =  Segment(self.expe[j], ort_proj1).length()\n",
+    "                    area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "                    # After the intersection:\n",
     "                    # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
     "                    base = Segment(intersect_point, ort_proj2).length()\n",
-    "                    height =  Segment(expe[j+1], ort_proj2).length()\n",
-    "                    area += area_right_triangle(base, height)\n",
+    "                    height =  Segment(self.expe[j+1], ort_proj2).length()\n",
+    "                    area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "                    j += 1 # advance along the experimental path \n",
     "\n",
     "                else:\n",
     "                    # Before the intersection:\n",
     "                    # the points form the right triangle -> expe[j], its projection, intersect_point\n",
-    "                    base = Segment(expe[j], intersect_point).length()\n",
-    "                    height = Segment(theo[i],\\\n",
-    "                                     Segment(expe[j],intersect_point).orthogonal_projection(theo[i])).length()\n",
-    "                    area += area_right_triangle(base, height)\n",
+    "                    base = Segment(self.expe[j], intersect_point).length()\n",
+    "                    height = Segment(self.theo[i],\\\n",
+    "                                     Segment(self.expe[j],intersect_point).orthogonal_projection(self.theo[i])).length()\n",
+    "                    area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "                    # After the intersection:\n",
     "                    # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
-    "                    base = Segment(intersect_point, expe[j+1]).length()\n",
-    "                    height = Segment(theo[i+1],\\\n",
-    "                                    Segment(expe[j+1],intersect_point).orthogonal_projection(theo[i+1])).length()\n",
-    "                    area += area_right_triangle(base, height)\n",
+    "                    base = Segment(intersect_point, self.expe[j+1]).length()\n",
+    "                    height = Segment(self.theo[i+1],\\\n",
+    "                                    Segment(self.expe[j+1],intersect_point).orthogonal_projection(self.theo[i+1])).length()\n",
+    "                    area += Triangle.area_right_triangle(base, height)\n",
     "\n",
     "                    j += 1 # advance along the experimental path \n",
     "\n",
-    "            elif Segment(theo[i],theo[i+1]).point_belongs_to_segment(ort_proj1)\\\n",
-    "            and Segment(theo[i],theo[i+1]).point_belongs_to_segment(ort_proj2):     \n",
+    "            elif Segment(self.theo[i],self.theo[i+1]).point_belongs_to_segment(ort_proj1)\\\n",
+    "            and Segment(self.theo[i],self.theo[i+1]).point_belongs_to_segment(ort_proj2):     \n",
     "\n",
-    "                area += Segment(ort_proj1, ort_proj2).compute_area(Segment(expe[j], expe[j+1]))\n",
+    "                area += Segment(ort_proj1, ort_proj2).compute_area(Segment(self.expe[j], self.expe[j+1]))\n",
     "                j += 1 # advance along the experimental path  \n",
     "\n",
     "            else:\n",
@@ -391,6 +399,13 @@
     "        return area / distance\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
