--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import unittest\n",
     "\n",
-    "import solution as sl ## the solution notebook exported as a script"
+    "import trajectory_error/solution as sl ## the solution notebook exported as a script"
    ]
   },
   {
